add mongo for drift detection

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,32 @@
 # Database Configuration
-# PostgreSQL example (optional - defaults to SQLite if not set)
+# PostgreSQL example (for user management and authentication)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/azure_drift
+
+# MongoDB Configuration (for drift detection data)
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB=azure_drift_detector
+MONGODB_USER=your_mongodb_user
+MONGODB_PASSWORD=your_mongodb_password
+MONGODB_AUTH_SOURCE=admin
+MONGODB_REPLICA_SET=rs0  # Optional: if using replica set
+MONGODB_SSL_ENABLED=false
+MONGODB_SSL_CA_CERT=/path/to/ca.pem  # Optional: if using SSL
+MONGODB_MAX_POOL_SIZE=100
+MONGODB_MIN_POOL_SIZE=10
+MONGODB_MAX_IDLE_TIME_MS=60000
+MONGODB_CONNECT_TIMEOUT_MS=20000
+MONGODB_SOCKET_TIMEOUT_MS=20000
+MONGODB_SERVER_SELECTION_TIMEOUT_MS=30000
+
+# MongoDB Collection Settings
+MONGODB_CONFIGS_COLLECTION=configurations
+MONGODB_DRIFT_HISTORY_COLLECTION=drift_history
+MONGODB_SIGNIN_LOGS_COLLECTION=signin_logs
+
+# MongoDB Index Settings
+MONGODB_TTL_INDEX_DAYS=90  # Days to keep data before automatic deletion
+MONGODB_CONFIGS_TTL_DAYS=30  # Days to keep configurations
+MONGODB_LOGS_TTL_DAYS=90  # Days to keep sign-in logs
 
 # Session Security
 SESSION_SECRET=your-secret-key-here
