--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ Flask-Login==0.6.3
 Flask-Dance
 Flask-Swagger-UI
 Werkzeug==3.0.1
-psycopg2-binary==2.9.9
+pymongo==4.6.1
+motor==3.3.2
 APScheduler==3.10.4
 deepdiff
 authlib==1.3.0
