add docker to readme

--- a/.env
+++ b/.env
@@ -1,15 +1,192 @@
-﻿# Database Configuration
+# Database Configuration
+# PostgreSQL example (for user management and authentication)
 DATABASE_URL=postgresql://postgres:2525@localhost:5432/savanna_tech_test
 
-# Security Configuration
-SESSION_SECRET=your-super-secret-session-key-change-this
-PASSWORD_SALT=your-super-secret-password-salt-change-this
+# MongoDB Configuration (for drift detection data)
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB=azure_drift_detector
+MONGODB_USER=your_mongodb_user
+MONGODB_PASSWORD=your_mongodb_password
+MONGODB_AUTH_SOURCE=admin
+MONGODB_REPLICA_SET=rs0  # Optional: if using replica set
+MONGODB_SSL_ENABLED=false
+MONGODB_SSL_CA_CERT=/path/to/ca.pem  # Optional: if using SSL
+MONGODB_MAX_POOL_SIZE=100
+MONGODB_MIN_POOL_SIZE=10
+MONGODB_MAX_IDLE_TIME_MS=60000
+MONGODB_CONNECT_TIMEOUT_MS=20000
+MONGODB_SOCKET_TIMEOUT_MS=20000
+MONGODB_SERVER_SELECTION_TIMEOUT_MS=30000
 
-# Microsoft OAuth Configuration
-AZURE_CLIENT_ID=your-azure-client-id
-AZURE_CLIENT_SECRET=your-azure-client-secret
-AZURE_TENANT_ID=your-azure-tenant-id
 
-# Application Configuration
-FLASK_ENV=development
-FLASK_DEBUG=1
+AZURE_CLIENT_ID=cc3c5562-ad5d-4b7f-aa97-04be2f286894
+AZURE_CLIENT_SECRET=~Hc8Q~-Tnvzqk4QNbH-guHofTd7R1ulF452DgcaW
+AZURE_TENANT_ID=2b3c29de-9f5a-4ec0-b8a7-6ca431fe6976
+
+# MongoDB Collection Settings
+MONGODB_CONFIGS_COLLECTION=configurations
+MONGODB_DRIFT_HISTORY_COLLECTION=drift_history
+MONGODB_SIGNIN_LOGS_COLLECTION=signin_logs
+
+# MongoDB Index Settings
+MONGODB_TTL_INDEX_DAYS=90  # Days to keep data before automatic deletion
+MONGODB_CONFIGS_TTL_DAYS=30  # Days to keep configurations
+MONGODB_LOGS_TTL_DAYS=90  # Days to keep sign-in logs
+
+# Session Security
+SESSION_SECRET=dfsdfgfhgsfdg
+
+# Azure Configuration
+# Add your Azure credentials and configuration here
+AZURE_CLIENT_ID=cc3c5562-ad5d-4b7f-aa97-04be2f286894
+AZURE_CLIENT_SECRET=~Hc8Q~-Tnvzqk4QNbH-guHofTd7R1ulF452DgcaW
+AZURE_TENANT_ID=2b3c29de-9f5a-4ec0-b8a7-6ca431fe6976
+AZURE_SUBSCRIPTION_ID=your_subscription_id
+
+# Application Settings
+FLASK_ENV=development  # or production
+FLASK_APP=src.core.app:create_app()
+FLASK_DEBUG=1  # Set to 0 in production
+
+# Logging Configuration
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_FORMAT=json  # json or text
+LOG_FILE_PATH=/var/log/azure_drift/app.log
+LOG_MAX_SIZE=10485760  # 10MB
+LOG_BACKUP_COUNT=5
+LOG_CATEGORIES=application,azure,database,security,performance,audit
+ENABLE_STRUCTURED_LOGGING=true
+ENABLE_CORRELATION_IDS=true
+
+# Metrics Configuration
+ENABLE_METRICS=true
+METRICS_PORT=9090
+METRICS_PATH=/metrics
+METRICS_PREFIX=azure_drift
+ENABLE_PROMETHEUS=true
+ENABLE_GRAFANA=true
+GRAFANA_PORT=3000
+METRICS_RETENTION_DAYS=30
+METRICS_SCRAPE_INTERVAL=15
+
+# Tracing Configuration
+ENABLE_TRACING=true
+TRACING_SERVICE_NAME=azure-drift-detector
+TRACING_SAMPLE_RATE=0.1
+TRACING_EXPORTER=jaeger  # jaeger, otlp, or none
+JAEGER_HOST=localhost
+JAEGER_PORT=6831
+OTLP_ENDPOINT=http://localhost:4317
+
+# Alerting Configuration
+ENABLE_ALERTING=true
+ALERT_EMAIL_RECIPIENTS=admin@example.com
+ALERT_SLACK_WEBHOOK=your_slack_webhook_url
+ALERT_PAGERDUTY_KEY=your_pagerduty_key
+ALERT_MIN_SEVERITY=WARNING
+ALERT_THROTTLE_MINUTES=5
+
+# Monitoring Dashboard
+ENABLE_DASHBOARD=true
+DASHBOARD_PORT=8080
+DASHBOARD_AUTH_ENABLED=true
+DASHBOARD_USER=admin
+DASHBOARD_PASSWORD=your_dashboard_password
+
+# Log Aggregation
+ENABLE_ELK=true
+ELASTICSEARCH_URL=http://localhost:9200
+KIBANA_URL=http://localhost:5601
+LOGSTASH_HOST=localhost
+LOGSTASH_PORT=5044
+
+# Application Insights
+ENABLE_APP_INSIGHTS=true
+APP_INSIGHTS_CONNECTION_STRING=your_connection_string
+APP_INSIGHTS_SAMPLE_RATE=100
+
+# Performance Monitoring
+ENABLE_PERFORMANCE_MONITORING=true
+PERF_METRICS_INTERVAL=60
+PERF_METRICS_RETENTION_DAYS=7
+ENABLE_SLOW_QUERY_LOGGING=true
+SLOW_QUERY_THRESHOLD_MS=1000
+
+# Audit Logging
+ENABLE_AUDIT_LOGGING=true
+AUDIT_LOG_RETENTION_DAYS=365
+AUDIT_LOG_ENCRYPTION=true
+AUDIT_LOG_BACKUP_ENABLED=true
+
+# Security Monitoring
+ENABLE_SECURITY_MONITORING=true
+SECURITY_LOG_RETENTION_DAYS=365
+ENABLE_IP_BLOCKING=true
+MAX_FAILED_LOGINS=5
+BLOCK_DURATION_MINUTES=30
+
+# Optional: Server Configuration
+PORT=5000
+HOST=0.0.0.0
+
+# Optional: Database Pooling Settings
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
+
+# Azure Monitor Settings
+AZURE_MONITOR_INTERVAL=300  # 5 minutes in seconds
+AZURE_MONITOR_BATCH_SIZE=100
+AZURE_MONITOR_MAX_RETRIES=3
+AZURE_MONITOR_RETRY_DELAY=5
+
+# Resource Type Settings
+AZURE_MONITOR_VMS=true
+AZURE_MONITOR_STORAGE=true
+AZURE_MONITOR_NSGS=true
+AZURE_MONITOR_KEYVAULTS=true
+
+# Export Settings
+EXPORT_MAX_ROWS=10000
+EXPORT_CHUNK_SIZE=1000
+
+# Security Settings
+SESSION_COOKIE_SECURE=true
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SAMESITE=Lax
+PERMANENT_SESSION_LIFETIME=3600  # 1 hour in seconds
+
+# Email Settings (if needed)
+SMTP_SERVER=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=your_smtp_username
+SMTP_PASSWORD=your_smtp_password
+EMAIL_FROM=noreply@example.com
+
+# Cache Settings
+CACHE_TYPE=redis
+CACHE_REDIS_URL=redis://localhost:6379/0
+CACHE_DEFAULT_TIMEOUT=300
+
+# API Settings
+API_RATE_LIMIT=100
+API_RATE_LIMIT_PERIOD=60
+API_TIMEOUT=30
+
+# Feature Flags
+ENABLE_DRIFT_DETECTION=true
+ENABLE_SIGNIN_MONITORING=true
+ENABLE_RESOURCE_MONITORING=true
+ENABLE_EXPORT_FEATURES=true
+
+# Notification Settings
+ENABLE_EMAIL_NOTIFICATIONS=false
+ENABLE_SLACK_NOTIFICATIONS=false
+SLACK_WEBHOOK_URL=your_slack_webhook_url
+
+# Backup Settings
+ENABLE_AUTO_BACKUP=true
+BACKUP_INTERVAL=86400  # 24 hours in seconds
+BACKUP_RETENTION_DAYS=30
+BACKUP_PATH=/var/backups/azure_drift 
